--- a/styles/scss/_mixins.scss
+++ b/styles/scss/_mixins.scss
@@ -41,7 +41,7 @@
     line-height: 6rem;
   }
 
-  @include media-max($max80) {
+  @include media-max($max48) {
     font-size: 3rem;
     line-height: 4rem;
   }
